# odincontrib.sqlalchemy

./: README.rst  requirements.txt  setup.cfg  setup.py
odincontrib/sqlalchemy/: __init__.py
odincontrib_sqlalchemy/: mapping.py
tests/: test_sqlalchemy.py
